# Tempo

./: .gitignore  README.md  index.html  notification.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  notification-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  config.rs  idle.rs  lib.rs  main.rs  monitor.rs  reminder.rs
src/components/dashboard/: DashboardPage.tsx
src/components/layout/: Sidebar.tsx
src/components/notification/: NotificationPopup.tsx
src/components/settings/: ReminderCard.tsx  ReminderForm.tsx  RemindersPage.tsx  RestPeriodsPage.tsx  SettingsPage.tsx
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
